--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ a {
 html {
   font-size: 10px;
   font-family: 'Montserrat', sans-serif;
+  background: black;
 }
-
 
 .container {
   min-height: 100vh;
@@ -28,6 +28,7 @@ img {
   height: 100%;
   object-fit: cover;
 }
+
 p {
   color: rgb(80, 74, 74);
   text-align: left;
@@ -39,7 +40,7 @@ p {
 .section-title {
   font-size: 4rem;
   font-weight: 300;
-  color: black;
+  color: white;
   margin-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
@@ -74,13 +75,12 @@ p {
   top: 0;
   width: 100vw;
   height: auto;
-  
 }
 
 #header .header {
   min-height: 8vh;
   background-color: rgba(31, 30, 30, 0.24);
-  transition: .5s ease background-color;
+  transition: 0.5s ease background-color;
 }
 #header .nav-bar {
   display: flex;
@@ -105,13 +105,13 @@ p {
   align-items: center;
   z-index: 1;
   overflow-x: hidden;
-  transition: .8s ease lef;
+  transition: 0.8s ease lef;
 }
 
 #header .nav-list ul.active {
   left: 0;
 }
- 
+
 #header .nav-list ul a {
   font-size: 2.5rem;
   font-weight: 500;
@@ -155,14 +155,13 @@ p {
   justify-content: center;
   z-index: 100;
   cursor: pointer;
-  transform: scale(.8);
+  transform: scale(0.8);
   margin-right: 30px;
-
 }
 
 #header .hamburger::after {
   position: absolute;
-  content: "";
+  content: '';
   height: 100%;
   width: 100%;
   border-radius: 50%;
@@ -194,11 +193,11 @@ p {
 #header .hamburger .bar::before {
   bottom: 8px;
 }
-#header .hamburger.active .bar::before{
+#header .hamburger.active .bar::before {
   bottom: 0;
 }
 
-#header .hamburger.active .bar::after{
+#header .hamburger.active .bar::after {
   top: 0;
 }
 /*end header section ============================================== ESTUDAR ISSO*/
@@ -300,6 +299,7 @@ p {
 
 #projects .projects-header h1 {
   margin-bottom: 50px;
+  margin-top: -145px;
 }
 
 #projects .all-projects {
@@ -346,12 +346,12 @@ p {
   font-weight: 300;
 }
 
-#header h1{
- text-transform: uppercase;
- font-size: 2rem;
- position: absolute;
- top: 30%;
- margin: auto 3rem;
+#header h1 {
+  text-transform: uppercase;
+  font-size: 2rem;
+  position: absolute;
+  top: 30%;
+  margin: auto 3rem;
 }
 
 #projects .project-img {
@@ -369,13 +369,18 @@ p {
   height: 100%;
   width: 100%;
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-  opacity: 0.6;
+  opacity: 0.4;
 }
 
 #projects .project-item:hover .project-img img {
   transform: scale(1.01);
   transition: 1s;
 }
+
+#about .col-rig {
+  margin-top: -120px;
+}
+
 /*END Project Section*/
 
 /*Services Section*/
@@ -390,7 +395,7 @@ p {
 #services .section-title {
   font-size: 4rem;
   font-weight: 300;
-  color: black;
+  color: white;
   margin-bottom: 10px;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
@@ -418,13 +423,57 @@ p {
   flex-direction: column;
   padding: 30px;
   border-radius: 10px;
-  background: rgba(153, 150, 187, 0.24);
+  background: whitesmoke;
   background-size: cover;
   margin: 10px 5%;
   color: rgb(245, 126, 126);
   position: relative;
   z-index: 1;
   overflow: hidden;
+}
+
+#services img {
+  background: rgb(7, 7, 7);
+  border-radius: 50%;
+}
+
+#services .tab-border1 {
+  border-bottom: rgb(226, 96, 9) 9px solid;
+  transition: 0.9s;
+  cursor: pointer;
+}
+
+#services .tab-border2 {
+  border-bottom: rgb(60, 106, 204) 9px solid;
+  transition: 0.9s;
+  cursor: pointer;
+}
+#services .tab-border3 {
+  border-bottom: rgb(253, 236, 0) 9px solid;
+  transition: 0.9s;
+  cursor: pointer;
+}
+#services .tab-border4 {
+  border-bottom: rgb(46, 197, 243) 9px solid;
+  transition: 0.9s;
+  cursor: pointer;
+}
+
+#services .tab-border1:hover {
+  background: linear-gradient(to left, rgb(255, 255, 255), rgb(226, 96, 9));
+  color: white;
+}
+
+#services .tab-border2:hover {
+  background: linear-gradient(to left, rgb(255, 255, 255), rgb(60, 106, 204));
+}
+
+#services .tab-border3:hover {
+  background: linear-gradient(to left, rgb(255, 255, 255), rgb(253, 236, 0));
+}
+
+#services .tab-border4:hover {
+  background: linear-gradient(to left, rgb(255, 255, 255), rgb(46, 197, 243));
 }
 
 #services .service-item::after {
@@ -481,11 +530,20 @@ p {
   font-size: 1.8rem;
   font-weight: 500;
   letter-spacing: 0.2rem;
-  margin-bottom: 10px;
+  margin-bottom: 39px;
+  margin-top: 60px;
+  color: white;
+  margin-left: 2.1rem;
 }
 
 #about .col-rig p {
   margin-bottom: 20px;
+  color: rgb(192, 181, 181);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1.7rem;
+  margin-left: 2.1rem;
+  text-align: justify;
+  margin-right: 2.2rem;
 }
 #about .col-lef .about-img {
   height: 100%;
@@ -527,6 +585,14 @@ p {
   box-shadow: 0px 0px 18px 0 #0000002c;
   transition: 0.3s ease box-shadow;
   cursor: pointer;
+  background: white;
+  border-bottom: crimson 9px solid;
+}
+
+#contact .contact-item:hover {
+  background: crimson;
+  color: whitesmoke;
+  border-bottom: white 9px solid;
 }
 
 #contact .contact-item:hover {
@@ -536,21 +602,17 @@ p {
   width: 18%;
   margin: 0 auto;
   margin-bottom: 10px;
-  
 }
 #contact .contact-info h1 {
   font-size: 2.5rem;
   font-weight: 500;
   margin-bottom: 5px;
-
 }
 
 #contact .contact-info h2 {
   font-size: 1.3rem;
   font-weight: 500;
   flex-direction: horizontal;
-  
-  
 }
 
 /*footer*/
@@ -617,12 +679,11 @@ p {
 @keyframes hamburger_puls {
   0% {
     opacity: 1;
-    transform:scale(1);
-  } 
+    transform: scale(1);
+  }
   100% {
     opacity: 0;
     transform: scale(1.4);
-
   }
 }
 
@@ -709,7 +770,7 @@ p {
   #about .col-lef {
     width: 600px;
     height: 400px;
-    padding-left: 60px;
+    padding-left: 70px;
   }
 
   #about .about .col-lef .about-img::after {
@@ -734,6 +795,7 @@ p {
     justify-content: center;
     align-items: center;
     min-width: 20vh;
+    margin-top: -350px;
   }
   #contact .contact-items {
     width: 100%;
@@ -764,25 +826,24 @@ p {
 @media only screen and (min-width: 1200px) {
   #header .hamburger {
     display: none;
-
   }
- #header .nav-list ul {
-   position: initial;
-   display: block;
-   height: auto;
-   width: fit-content;
-   background-color: transparent;
- }
- #header .nav-list ul li {
-   display: inline-block;
- }
- #header .nav-list ul li a {
-   font-size: 1.8rem;
- }
+  #header .nav-list ul {
+    position: initial;
+    display: block;
+    height: auto;
+    width: fit-content;
+    background-color: transparent;
+  }
+  #header .nav-list ul li {
+    display: inline-block;
+  }
+  #header .nav-list ul li a {
+    font-size: 1.8rem;
+  }
 
- #header .nav-list ul a::after {
-   display: none;
- }
+  #header .nav-list ul a::after {
+    display: none;
+  }
   #services .service-bottom .service-item {
     flex-basis: 22%;
     margin: 1.5%;
