--- a/style.css
+++ b/style.css
@@ -834,6 +834,34 @@ p {
     width: 90%;
     height: auto;
   }
+  #hero h1{
+    font-size: 36px;
+    
+  }
+
+  #projects .section-title-projects {
+    font-size: 25px;
+  }
+
+  #services .section-title {
+    font-size: 25px;
+  }
+  #about .section-title {
+    font-size: 25px;
+  }
+  
+  #contact .section-title {
+    font-size: 25px;
+  }
+
+  #contact img {
+    width: 29px;
+    height: auto;
+  }
+  #contact .contact-info h2 {
+    font-size: 10px;
+    text-transform: bold;
+  }
 }
 
 @media only screen and (min-width: 768px) {
@@ -971,4 +999,26 @@ p {
     flex-basis: 22%;
     margin: 1.5%;
   }
+}
+
+
+[data-anime] {
+  opacity: 0;
+  transition: .5s;
+}
+
+[data-anime = "left"] {
+  transform: translate3d(-50px, 0, 0);
+}
+[data-anime = "right"] {
+  transform: translate3d(50px, 0, 0);
+}
+
+[data-anime = "top"] {
+  transform: translate3d(0, -50px, 0);
+}
+
+[data-anime].animate {
+  opacity: 1;
+  transform: translate3d(0px, 0px, 0px);
 }
